--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>增值服务费：</label>
-				<input type="text" class="mui-input-clear" id="staAddprice">
+				<input type="text" class="mui-input-clear" id="staAddprice" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>运费：</label>
