--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -43,7 +43,8 @@
 			</div>
 			<div class="mui-input-row">
 				<label>已付金额：</label>
-				<input type="text" class="mui-input-clear" id="staPoLastDa" disabled>
+				<input type="text" class="mui-input-clear doubleInput" id="staPoLastDa" disabled>
+				<input type="text" class="mui-input-clear doubleInput" id="staPoLastDaPerent" style="color: #088A29;"disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>服务费：</label>
