--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -114,7 +114,7 @@
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri">
 		    		本地备货
-			        <input checked type="radio" name="localOriginType" value="1" class="inputRadio"/>
+			        <input checked="checked" type="radio" name="localOriginType" value="1" class="inputRadio" id="nochecked"/>
 		        	产地直发
 		        	<input id="yes" type="radio" name="localOriginType" value="0"  class="inputRadio"/>
 	        	</div>
