--- a/src/main/webapp/static/mobile/html/management.html
+++ b/src/main/webapp/static/mobile/html/management.html
@@ -5,14 +5,15 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<meta name="full-screen" content="yes">
 		<meta name="x5-fullscreen" content="true">
+		<meta http-equiv="Expires" content="0">
+		<meta http-equiv="Pragma" content="no-cache">
+		<meta http-equiv="Cache-control" content="no-cache">
+		<meta http-equiv="Cache" content="no-cache">
 	<!--<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />-->
 		<title>运营管理</title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link href="../css/app.css" rel="stylesheet" />
-		<style type="text/css">
-			.mui-table-view-cell>a:not(.mui-btn) {margin: -10px -15px;}
-		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -29,6 +30,10 @@
 		<script src="../js/component/mui.min.js"></script>
 		<script src="../js/component/zepto.min.js"></script>
 		<script src="../js/component/GHutils.js"></script>
-		<script src="../js/management.js"></script>
+		<script>
+			var now = new Date().getTime();			
+            document.write("<s"+"cript type='text/javascript' src='../js/management.js?v="+ now +"'></scr"+"ipt>");
+            document.write('<link rel="stylesheet" href="../css/app.css?time='+new Date().getTime()+'">');             
+		</script>
 	</body>
 </html>
