--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -74,7 +74,7 @@
 					<label>测试数据：</label>
 					<input type="checkbox" name="" id="" value="" class="testCheckbox"/>
 				</div>
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<label>待审核：</label>
 					<input type="checkbox" name="a" id="staOrdCheck" value=""/>
 				</div>
@@ -85,7 +85,7 @@
 				<div class="mui-input-row">
 					<label>审核失败：</label>
 					<input type="checkbox" name="a" id="staOrdFail" value="" />
-				</div>
+				</div>-->
 			</form>
 		</div>
 		<div class="SearchBtnClass">
