--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrderList.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单列表</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20180912" rel="stylesheet" />
 		<style type="text/css">
  			#refreshContainer,#nav{touch-action: none;}
 		</style>
@@ -45,10 +45,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script>
-			var now = new Date().getTime();			
-            document.write("<s"+"cript type='text/javascript' src='../../../js/staffMgmtJs/orderJs/staOrderList.js?v="+ now +"'></scr"+"ipt>");
-            document.write('<link rel="stylesheet" href="../../../css/app.css?time='+new Date().getTime()+'">');             
-		</script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrderList.js?v=20180912"></script>
 	</body>
 </html>
