--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -12,7 +12,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>运营管理后台</title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css" rel="stylesheet" />
+		<link href="../css/app.css?time=20180912" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -36,11 +36,7 @@
 		<script src="../js/component/mui.min.js"></script>
 		<script src="../js/component/zepto.min.js"></script>
 		<script src="../js/component/GHutils.js"></script>
-		<script>
-			var now = new Date().getTime();			
-            document.write("<s"+"cript type='text/javascript' src='../js/backstagemgmt.js?v="+ now +"'></scr"+"ipt>");
-            document.write('<link rel="stylesheet" href="../css/app.css?time='+new Date().getTime()+'">');             
-		</script>
+		<script src="../js/backstagemgmt.js?v=20180912"></script>
 	</body>
 
 </html>
