--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单审核</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20180912" rel="stylesheet" />
 		<style type="text/css">
 			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4em;}
 		</style>
@@ -189,10 +189,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script>
-			var now = new Date().getTime();			
-            document.write("<s"+"cript type='text/javascript' src='../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v="+ now +"'></scr"+"ipt>");
-            document.write('<link rel="stylesheet" href="../../../css/app.css?time='+new Date().getTime()+'">');             
-		</script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20180912"></script>
 	</body>
 </html>
