--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />-->
 		<title>订单信息查询</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20180912" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
@@ -95,10 +95,6 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script>
-			var now = new Date().getTime();			
-            document.write("<s"+"cript type='text/javascript' src='../../../js/staffMgmtJs/orderJs/staOrdSech.js?v="+ now +"'></scr"+"ipt>");
-            document.write('<link rel="stylesheet" href="../../../css/app.css?time='+new Date().getTime()+'">');             
-		</script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdSech.js?v=20180912"></script>
 	</body>
 </html>
