--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -13,7 +13,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>经销店添加</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20180912" rel="stylesheet" />
 		<style type="text/css">
 			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4.5em;top: 5px;}
 		</style>
@@ -62,10 +62,6 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script>
-			var now = new Date().getTime();			
-            document.write("<s"+"cript type='text/javascript' src='../../../js/staffMgmtJs/relevanceJs/relAdd.js?v="+ now +"'></scr"+"ipt>");
-            document.write('<link rel="stylesheet" href="../../../css/app.css?time='+new Date().getTime()+'">');             
-		</script>
+		<script src="../../../js/staffMgmtJs/relevanceJs/relAdd.js?v=20180912"></script>
 	</body>
 </html>
