--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staSearch.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>客户专员查询</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
@@ -64,10 +64,6 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script>
-			var now = new Date().getTime();			
-            document.write("<s"+"cript type='text/javascript' src='../../js/staffMgmtJs/staSearch.js?v="+ now +"'></scr"+"ipt>");
-            document.write('<link rel="stylesheet" href="../../css/app.css?time='+new Date().getTime()+'">');             
-		</script>
+		<script src="../../js/staffMgmtJs/staSearch.js?v=20180912"></script>
 	</body>
 </html>
