--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inPay.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>付款</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
@@ -46,6 +46,6 @@
 	<script src="../../js/component/zepto.min.js"></script>
 	<script src="../../js/component/mui.min.js"></script>
 	<script src="../../js/component/GHutils.js"></script>
-	<script src="../../js/inventoryMagmetJs/inPay.js"></script>	
+	<script src="../../js/inventoryMagmetJs/inPay.js?time=20180912"></script>	
 	</body>
 </html>
