--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryList.html
@@ -8,7 +8,7 @@
 		<meta name="x5-fullscreen" content="true">
 		<title>备货单管理</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
     	<style type="text/css">
  			#refreshContainer{touch-action: none;}  
 		</style>
@@ -39,6 +39,6 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryList.js"></script>
+		<script src="../../js/inventoryMagmetJs/inventoryList.js?time=20180912"></script>
 	</body>
 </html>
