--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>审核</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -56,7 +56,7 @@
 	<script src="../../js/component/mui.min.js"></script>
 	<script src="../../js/component/zepto.min.js"></script>
 	<script src="../../js/component/GHutils.js"></script>
-	<script src="../../js/inventoryMagmetJs/inCheck.js"></script>
+	<script src="../../js/inventoryMagmetJs/inCheck.js?time=20180912"></script>
     </body>
 </html>
 
