--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>备货单添加</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
 		<style type="text/css">
 			.labelri {font-size: 14px;}
 			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4em;}
@@ -56,6 +56,18 @@
 				</div>
 			</div>
 			<div class="mui-input-row">
+				<label>供应商卡号：</label>
+				<input type="text" class="mui-input-clear" id="inSupplierNum">
+			</div>
+			<div class="mui-input-row">
+				<label>收款人：</label>
+				<input type="text" class="mui-input-clear" id="inSupplierName">
+			</div>
+			<div class="mui-input-row">
+				<label>开户行：</label>
+				<input type="text" class="mui-input-clear" id="inSupplierBank">
+			</div>
+			<div class="mui-input-row">
 				<label>收货时间：</label>
 				<input type="date" class="mui-input-clear" id="inPoLastDa">
 				<font>*</font>
@@ -91,6 +103,10 @@
 					<div style="clear:both"></div>
 				</div>
 			</div>
+			<div class="mui-input-row">
+				<label>排产时间：</label>
+				<input type="text" class="mui-input-clear" id="inProductTime">
+			</div>
 		</div>
 		<div class="inSaveBtn">
 			<button id="inSaveBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
@@ -100,7 +116,7 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryAddList.js"></script>
+		<script src="../../js/inventoryMagmetJs/inventoryAddList.js?time=20180912"></script>
 	</body>
 
 </html>
