--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>备货单详情</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
 		<style type="text/css">
 			.mui-input-group .mui-input-row:after {left: 0px;}
 		</style>
@@ -119,6 +119,6 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryDetails.js"></script>
+		<script src="../../js/inventoryMagmetJs/inventoryDetails.js?time=20180912"></script>
 	</body>
 </html>
