--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -104,7 +104,7 @@
 				</div>
 			</div>
 			<div class="mui-input-row">
-				<label>排产时间：</label>
+				<label>排产类型：</label>
 				<input type="text" class="mui-input-clear" id="inProductTime">
 			</div>
 		</div>
