--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -21,9 +21,9 @@
 				<label>备货方：</label>
 		    	<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">
 		    		采购中心备货
-		        	<input checked type="radio" name="apply" class="inputRadio"/>
+		        	<input checked id="purchase" type="radio" name="apply" class="inputRadio" value="1"/>
 		        	厂商备货
-		        	<input id="yes" type="radio" name="apply" class="inputRadio" />    
+		        	<input id="manu" type="radio" name="apply" class="inputRadio" value="2"/>    
 	        	</div>
 		        <!--<div id="changeTxt" class="labelri" style="padding: 10px 14px 10px 0;text-align: left;">	
                 	
@@ -105,7 +105,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>排产类型：</label>
-				<input type="text" class="mui-input-clear" id="inProductTime">
+				<input type="text" class="mui-input-clear" id="inProductTime" disabled>
 			</div>
 		</div>
 		<div class="inSaveBtn">
