--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/staffList.html
@@ -10,8 +10,8 @@
 		<meta http-equiv="Cache-control" content="no-cache">
 		<meta http-equiv="Cache" content="no-cache">
 		<title>客户专员管理</title>
-		<link href="../../css/mui.min.css?time=20180912.css" rel="stylesheet" />
-		<link href="../../css/app.css?time=20180912" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20180914" rel="stylesheet" />
     	<style type="text/css">
  			#refreshContainer{touch-action: none;}  
 			#refreshContainer .hide {visibility: visible!important;} 
@@ -40,6 +40,6 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/staffMgmtJs/staffList.js?v=20180912"></script>
+		<script src="../../js/staffMgmtJs/staffList.js?v=20180914"></script>
 	</body>
 </html>
