--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdSech.html
@@ -110,7 +110,7 @@
 		</div>
 		
 		<input type="hidden" name="flag" id="flag" value="check_pending"/>
-		<input type="text" name="mobileAuditStatus" id="mobileAuditStatus"/>
+		<input type="hidden" name="mobileAuditStatus" id="mobileAuditStatus"/>
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
