--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -35,11 +35,9 @@
 			<div class="mui-input-row">
 				<label>采购中心：</label>
 				<div class="pre">
-					<input class="newinput" type="text" id="inOrordNum" placeholder="请选择采购中心">
-					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend"></span>
-					<div class="input_div" style="display: none;">
-
-					</div>
+					<input class="newinput01" type="text" id="inOrordNum" placeholder="请选择采购中心">
+					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend01"></span>
+					<div class="input_div01" style="display: none;"></div>					
 					<input class="savedata" type="hidden" value=''>
 					<div style="clear:both"></div>
 				</div>
@@ -47,7 +45,14 @@
 			</div>
 			<div class="mui-input-row">
 				<label>供应商：</label>
-				<input type="text" class="mui-input-clear" id="insupplier" disabled>
+				<div class="pre">
+					<input class="newinput02" type="text" id="insupplier">
+					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend02"></span>
+					<div class="input_div02" style="display: none;"></div>					
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+				<font>*</font>
 			</div>
 			<div class="mui-input-row">
 				<label>供应商卡号：</label>
@@ -110,9 +115,8 @@
 			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
-		<input id="inSta" name="inSta" type="hidden" />
+		<input id="inSta" name="inSta" type="text" />
 		<div class="clear"></div>
-
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
