--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -22,14 +22,12 @@
 			</div>
 			<div class="mui-input-row" id="orderTypebox">
 				<label>备货方：</label>
-		    	<div id="changeTxt" class="labelri">
+		    	<div id="changeTxt" class="labelri inStock">
+		    		采购中心备货
 			        <input id="fromType1" type="radio" name="fromType" value="1" checked  disabled="disabled" class="inputRadio"/>
-			                采购中心备货
+			                厂商备货 
+			        <input id="fromType2" type="radio" name="fromType" value="2"  disabled="disabled" class="inputRadio"/>
 		        </div>	
-		        <div id="changeTxt" class="labelri">
-		        	<input id="fromType2" type="radio" name="fromType" value="2"  disabled="disabled" class="inputRadio"/>
-		        	厂商备货
-	        	</div>
 		    </div>
 			<div class="mui-input-row">
 				<label>采购中心：</label>
