--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -23,19 +23,17 @@
 			</div>
 			<div class="mui-input-row" id="orderTypebox">
 				<label>备货方：</label>
-		    	<div id="changeTxt" class="labelri">
+		    	<div id="changeTxt" class="labelri inStock">
+		    		采购中心备货
 			        <input id="fromType1" type="radio" name="fromType" value="1" checked class="inputRadio"/>
-			                采购中心备货
+			                厂商备货  
+			        <input id="fromType2" type="radio" name="fromType" value="2" class="inputRadio"/>
 		        </div>	
-		        <div id="changeTxt" class="labelri">
-		        	<input id="fromType2" type="radio" name="fromType" value="2" class="inputRadio"/>
-		        	厂商备货
-	        	</div>
 		    </div>
 			<div class="mui-input-row">
 				<label>采购中心：</label>
 				<div class="pre">
-					<input class="newinput01" type="text" id="inOrordNum" placeholder="请选择采购中心">
+					<input class="newinput newinput01" type="text" id="inOrordNum" placeholder="请选择采购中心">
 					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend01"></span>
 					<div class="input_div01" style="display: none;"></div>					
 					<input class="savedata" type="hidden" value=''>
@@ -46,7 +44,7 @@
 			<div class="mui-input-row">
 				<label>供应商：</label>
 				<div class="pre">
-					<input class="newinput02" type="text" id="insupplier">
+					<input class="newinput newinput02" type="text" id="insupplier" placeholder="请选择供应商">
 					<span class="mui-icon mui-icon-closeempty hideSpan" id="hideSpanAmend02"></span>
 					<div class="input_div02" style="display: none;"></div>					
 					<input class="savedata" type="hidden" value=''>
@@ -115,7 +113,7 @@
 			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">保存</button>
 		</div>
 		<input id="inStatus" name="inStatus" type="hidden" />
-		<input id="inSta" name="inSta" type="text" />
+		<input id="inSta" name="inSta" type="hidden" />
 		<div class="clear"></div>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
