备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -25,7 +25,7 @@
 				<label>备货方：</label>
 		    	<div id="changeTxt" class="labelri inStock">
 		    		采购中心备货
-			        <input id="fromType1" type="radio" name="fromType" value="1" checked class="inputRadio"/>
+			        <input id="fromType1" type="radio" name="fromType" value="1" class="inputRadio"/>
 			                厂商备货  
 			        <input id="fromType2" type="radio" name="fromType" value="2" class="inputRadio"/>
 		        </div>	
