--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -20,15 +20,15 @@
 				<label>备货单编号：</label>
 				<input type="text" class="mui-input-clear" id="inPoordNum" disabled>
 			</div>
-			<!--<div class="mui-input-row" id="orderTypebox">
+			<div class="mui-input-row" id="orderTypebox">
 				<label>备货方：</label>
 		    	<div id="changeTxt" class="labelri inStock">
 		    		采购中心备货
-			        <input id="fromType1" type="radio" name="fromType" value="1" checked  disabled="disabled" class="inputRadio"/>
+			        <input id="fromType1" type="radio" name="fromType" value="1" disabled="disabled" class="inputRadio"/>
 			                厂商备货 
-			        <input id="fromType2" type="radio" name="fromType" value="2"  disabled="disabled" class="inputRadio"/>
+			        <input id="fromType2" type="radio" name="fromType" value="2" disabled="disabled" class="inputRadio"/>
 		        </div>	
-		    </div>-->
+		    </div>
 		    <div class="mui-input-row">
 				<label>备货方：</label>
 				<input type="text" class="mui-input-clear" id="inStocktxt" disabled>
