备货单添加

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -109,6 +109,7 @@
 		</div>
 		<div class="clear"></div>
 		<input type="hidden" name="inStockAdd" id="inStockAdd"/>
+		<input type="hidden" name="supplierId" id="supplierId"/>
 
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
