备货单修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -65,13 +65,13 @@
 				<input type="text" class="mui-input-clear" id="insupplierBank" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>收货时间：</label>
+				<label>期望收货时间：</label>
 				<input type="date" class="" id="inPoLastDa">
 				<font>*</font>
 			</div>
 			<div class="mui-input-row" id="inAmendPoLastDaDiv">
 				<label class="commodityName">选择商品：</label>
-				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请输入">
+				<input type="text" class="mui-input-clear commodityTxt" id="inAmendPoLastDa" placeholder="请输入商品货号">
 				<button id="comChoiceBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">查询</button>
 			</div>
 
