--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -29,10 +29,10 @@
 			        <input id="fromType2" type="radio" name="fromType" value="2" disabled="disabled" class="inputRadio"/>
 		        </div>	
 		    </div>
-		    <div class="mui-input-row">
+		    <!--<div class="mui-input-row">
 				<label>备货方：</label>
 				<input type="text" class="mui-input-clear" id="inStocktxt" disabled>
-			</div>
+			</div>-->
 			<div class="mui-input-row">
 				<label>采购中心：</label>
 				<input type="text" class="mui-input-clear" id="inOrordNum" disabled>
@@ -66,7 +66,7 @@
 				<input type="text" class="mui-input-clear" id="inMarginLevel" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>已支付厂商保证金：</label>
+				<label>已付厂商保证金：</label>
 				<input type="text" class="mui-input-clear" id="inMoneyPay" disabled>
 			</div>
 			<div class="mui-input-row">
@@ -83,7 +83,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
-				<textarea id="inPoRemark" name="" rows="" cols="" disabled style="border:1px solid #ccc;border-radius: 5px;margin:5px 5px 5px -5px;"></textarea>
+				<textarea id="inPoRemark" name="" rows="" cols="" readonly style="border:1px solid #ccc;border-radius: 5px;margin:5px 5px 5px -5px;"></textarea>
 			</div>
 			<div class="mui-input-row">
 				<label>业务状态：</label>
