--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -98,27 +98,25 @@
 				<div class="labelLf">采购商品：</div>
 				<ul id="purchaseMenu" class="mui-table-view"></ul>									
 			</div>
-			<div class="mui-input-row inComdty" id="schedulingPlan_forHeader">
+			<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forHeader">
 				<div class="labelLf">按订单排产：</div>
-				<div class="">
-					<label class="app_pr0" style="width:30%;float:left;font-size: 14px;">排产记录：</label>
+				<div class="mui-row app_bline3">
+					<label class="app_pr0" style="float:left;font-size: 13px;">排产记录：</label>
 					<ul id="schedulingHeader" class="mui-table-view app_fr app_w70p"></ul>											
 				</div>
-				<div class="">
-					<label class="app_pr0" style="width:30%;float:left;font-size: 14px;">排产备注：</label>
-				    <div id="schedulingHeaderRemark" class="mui-table-view app_fr"></div>									
+				<div class="schedulingHeaderRemark">
+					<label class="app_pr0" style="float:left;font-size: 13px;">排产备注：</label>
 				</div>				
 			</div>
 			<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forSku">
 				<div class="labelLf">按商品排产：</div>
-				<ul id="purchaseMenus" class="mui-table-view app_bline"></ul>
-				<div class="mui-row app_bline">
-					<label class="app_pr0" style="float:left;font-size: 14px;">排产记录：</label>
+				<ul id="purchaseMenus" class="mui-table-view app_bline3"></ul>
+				<div class="mui-row app_bline3">
+					<label class="app_pr0" style="float:left;font-size: 13px;">排产记录：</label>
 					<ul id="schedulingHeaders" class="mui-table-view app_fr app_w70p"></ul>											
 				</div>
 				<div class="schedulingHeaderRemarks">
-					<label class="app_pr0" style="float:left;font-size: 14px;">排产备注：</label>
-				   <!-- <div id="schedulingHeaderRemarks" class="" style="width:70%;float:left"></div>	-->								
+					<label class="app_pr0" style="float:left;font-size: 13px;">排产备注：</label>
 				</div>			
 			</div>
 			<!--审批流程块 有的话显示-->
