--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单审核</title>
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../../css/app.css?time=20180914" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20180919" rel="stylesheet" />
 		<style type="text/css">
 			.mui-input-row .mui-input-clear~.mui-icon-clear {right: 4em;}
 		</style>
@@ -174,8 +174,8 @@
 			</div>
 		</div>
 		<div id="staOrdCheckBtn" class="app_p20 app_pl25 app_pr25">
-		    <button id="checkBtns" type="submit" class="mui-btn mui-btn-blue">同意发货</button>
-			<button id="rejectBtns" type="submit" class="mui-btn mui-btn-blue app_fr">不同意发货</button>
+		    <button id="checkBtns" type="submit" class="mui-btn mui-btn-blue checkBtns">同意发货</button>
+			<button id="rejectBtns" type="submit" class="mui-btn mui-btn-blue app_fr rejectBtns">不同意发货</button>
 		</div>
 		<div class="clear"></div>
 		
@@ -189,6 +189,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20180914"></script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20180919"></script>
 	</body>
 </html>
